# djando-edu

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg
django_edu/: asgi.py  checker.py  models.py  settings.py  urls.py  views.py  wsgi.py
django_edu/locale/ru/LC_MESSAGES/: django.mo  django.po
django_edu/migrations/: 0001_initial.py  0002_alter_contest_tasks_alter_task_tests.py  0003_alter_contest_name_alter_task_name.py  0004_alter_task_ans_type.py  0005_alter_contest_id_alter_task_id_alter_test_id.py  0006_task_linked_contest_test_linked_task.py
django_edu/models/: contest.py  task.py  test.py
static/: tweaks.css
templates/: base_page.html  contests.html  index.html  login.html  tasks.html  tests.html
