[tool.poetry]
name = "django-edu"
version = "0.1.0"
description = ""
authors = ["errrorrr503 <egortit-33@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
